2025-11-27T12:32:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19736388476 # 1331
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-27
* notice: last 14d: unq all: 28 41
* notice: prev accum: outdated-unq outdated-all / unq all: 5054 10040 / 5088 10083
* notice: next accum: outdated-unq outdated-all / unq all: 5054 10040 / 5093 10089
* notice: prev exec diff / last date diff / accum: unq all: +5 +6 -0 -0 / +5 +6 -0 -0 / 5 6
* notice: removed / changed dates: [] / [2025-11-27]

2025-11-27T01:11:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19722015649 # 1330
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-27
* notice: last 14d: unq all: 23 35
* notice: prev accum: outdated-unq outdated-all / unq all: 5038 10020 / 5087 10082
* notice: next accum: outdated-unq outdated-all / unq all: 5054 10040 / 5088 10083
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -7 -8 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-11-12] / [2025-11-13 2025-11-26]

2025-11-26T01:12:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19689174904 # 1328
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-26
* notice: last 14d: unq all: 44 62
* notice: prev accum: outdated-unq outdated-all / unq all: 5024 10000 / 5087 10082
* notice: next accum: outdated-unq outdated-all / unq all: 5038 10020 / 5087 10082
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-11] / []

2025-11-25T01:11:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19654788419 # 1326