@@ -1,12 +1,7 @@
 {
-  "count": 41,
-  "uniques": 28,
+  "count": 38,
+  "uniques": 27,
   "clones": [
-    {
-      "timestamp": "2025-11-13T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2025-11-15T00:00:00Z",
       "count": 4,
