@@ -1,3 +1,12 @@
+2025-11-28T01:10:07Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19751241502 # 1332
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-28
+* notice: last 14d: unq all: 27 38
+* notice: prev accum: outdated-unq outdated-all / unq all: 5054 10040 / 5093 10089
+* notice: next accum: outdated-unq outdated-all / unq all: 5063 10051 / 5093 10089
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-11-13] / []
+
 2025-11-27T12:32:55Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19736388476 # 1331
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-27
